--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,23 @@ nav ul li a:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Enhanced shadow for better depth */
 }
 
+.contact-button {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #007074; /* Button background color */
+  color: white; /* Button text color */
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.contact-button:hover {
+  background-color: #034c53; /* Hover background color */
+  transform: scale(1.05); /* Slight zoom on hover */
+}
+
 .hamburger-menu {
   display: none;
   flex-direction: column;
